🚖 timeslot 엔티티 수정